syntax = "proto3";

package user;

option go_package = "proto/user";

message CaptchaRequest {}

message CaptchaResponse {
  string captcha = 1;
}

message UserLoginRequest {
  string phone = 1;
  string captcha = 2;
}

message UserLoginResponse {
  string token = 1;
}

service User {
  rpc SendCaptcha(CaptchaRequest) returns (CaptchaResponse) {}
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse) {}
}
